--- a/SteamAPIUserInfoUI/SteamAPIUserInfoUI.csproj
+++ b/SteamAPIUserInfoUI/SteamAPIUserInfoUI.csproj
@@ -3,9 +3,12 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+
+  <ItemGroup>
+    <PackageReference Include="SteamWebAPI2" Version="4.4.1" />
+  </ItemGroup>
 
 </Project>
